--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,6 +5,7 @@
   --vt-c-white-mute: #f2f2f2;
 
   --vt-c-black: #181818;
+  --vt-c-black-hard: #000000;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
@@ -18,7 +19,7 @@
   --vt-c-text-light-1: var(--vt-c-indigo);
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+  --vt-c-text-dark-2: rgba(235, 235, 235, 0.9);
 }
 
 /* semantic color variables for this project */
@@ -35,7 +36,7 @@
 
   --section-gap: 160px;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
@@ -50,6 +51,20 @@
   }
 }
 
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-background: var(--vt-c-white);
+    --color-background-soft: var(--vt-c-white-soft);
+    --color-background-mute: var(--vt-c-white-mute);
+
+    --color-border: var(--vt-c-divider-light-2);
+    --color-border-hover: var(--vt-c-divider-light-1);
+
+    --color-heading: var(--vt-c-text-light-1);
+    --color-text: var(--vt-c-text-light-2);
+  }
+} */
+
 *,
 *::before,
 *::after {
@@ -60,8 +75,9 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: var(--vt-c-text-light-1); 
+  background: var(--vt-c-white); 
+  border: var(--vt-c-divider-white-2);
   transition:
     color 0.5s,
     background-color 0.5s;
@@ -79,8 +95,13 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.theme-dark{
+  background-color:var(--vt-c-black-hard);;
+  color:var(--vt-c-text-dark-2);
+  border: var(--vt-c-divider-dark-2);
 }
