--- a/src/assets/vant_base.css
+++ b/src/assets/vant_base.css
@@ -45,9 +45,9 @@
   --van-line-height-sm: 18px;
   --van-line-height-md: 20px;
   --van-line-height-lg: 22px;
-  --van-base-font: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Segoe UI, Arial,
-    Roboto, 'PingFang SC', 'miui', 'Hiragino Sans GB', 'Microsoft Yahei', sans-serif;
-  --van-price-font: avenir-heavy, 'PingFang SC', helvetica neue, arial, sans-serif;
+  --van-base-font: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Segoe UI, Arial, Roboto, "PingFang SC", "miui", "Hiragino Sans GB",
+    "Microsoft Yahei", sans-serif;
+  --van-price-font: avenir-heavy, "PingFang SC", helvetica neue, arial, sans-serif;
   --van-duration-base: 0.3s;
   --van-duration-fast: 0.2s;
   --van-ease-out: ease-out;
@@ -89,7 +89,7 @@ a:focus,
 input:focus,
 button:focus,
 textarea:focus,
-[class*='van-']:focus {
+[class*="van-"]:focus {
   outline: none;
 }
 ol,
@@ -195,7 +195,7 @@ ul {
 .van-clearfix:after {
   display: table;
   clear: both;
-  content: '';
+  content: "";
 }
 .van-ellipsis {
   overflow: hidden;
@@ -232,10 +232,10 @@ ul {
 .van-haptics-feedback:active {
   opacity: var(--van-active-opacity);
 }
-[class*='van-hairline']:after {
+[class*="van-hairline"]:after {
   position: absolute;
   box-sizing: border-box;
-  content: ' ';
+  content: " ";
   pointer-events: none;
   top: -50%;
   right: -50%;
