feature: 新增装备改造界面
undefined

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,6 +6,7 @@
   --rare-color: #ff7;
   --unique-color: #af6025;
   --error-color: #e63946;
+  --van-primary-color: var(--error-color);
 
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
