feature: 装备改造修改
undefined

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,6 +6,8 @@
   --rare-color: #ff7;
   --unique-color: #af6025;
   --error-color: #e63946;
+  --fractured-color: #9c9676;
+  --crafted-color: #008b8b;
   --van-primary-color: var(--error-color);
 
   --vt-c-white: #ffffff;
