--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -120,3 +120,19 @@ input:-internal-autofill-selected {
   -webkit-text-fill-color: #ffffff !important;
   transition: background-color 5s ease-in-out 0s !important;
 } */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #222;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4a4a4a;
+}
